# blackmagic-capture

./: CMakeLists.txt  README.md  bmcapture.cpp  bmcapture.h  capture_delegate.cpp  capture_delegate.h  main.cpp
